# C-cpp

Markov-Tweets ex3a/: README.md  markov_chain.c  markov_chain.h  tweets_generator.c
cipher ex1/: CMakeLists.txt  README.md  cipher.c  cipher.h  main.c  tests.c  tests.h
ex2 Bus/: CMakeLists.txt  README.md  main.c  sort_bus_lines.c  sort_bus_lines.h  test_bus_lines.c  test_bus_lines.h
ex4-saeed.younis/: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  README.md  main.cpp
